--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsdom": "^28.1.0",
     "jspdf": "^4.2.0",
     "next": "14.2.18",
+    "node-html-parser": "^7.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
